# smart-agent-harmony

./: .gitignore  AGENTS.md  README.md  build-profile.json5  oh-package.json5  package-lock.json
.codex/: README.md
AppScope/: app.json5
entry/: hvigorfile.ts  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/types/libwg_boringtun/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets  EntryAbilityStage.ets  ImmersiveWindow.ets  WebBrowserPictureInPictureEvents.ets  WebShortcutAbility.ets  WebShortcutCloseEvents.ets  WebShortcutState.ets
entry/src/main/ets/pages/: AppPickerPage.ets  FloatingSelect.ets  Index.ets  LogsPage.ets  PageModels.ets  PageStyle.ets  RulesPage.ets  TunnelEditorPage.ets  TunnelsPage.ets  WebAddressSuggestionPanel.ets  WebBookmarkHome.ets  WebBrowserChrome.ets  WebBrowserHost.ets  WebBrowserPage.ets  WebBrowserStateStore.ets  WebBrowserSurfaceRegistry.ets  WebBrowserSurfaceStack.ets  WebBrowserTabModel.ets  WebBrowserTypes.ets  WebFullscreenProbe.ets  WebPullRefresh.ets  WebShortcut.ets  WebShortcutIconService.ets  WebViewSurface.ets
entry/src/main/ets/types/: libwg_boringtun.d.ts
entry/src/main/ets/vpnextension/: WgVpnExtensionAbility.ets
entry/src/main/ets/wireguard/: ConfigStore.ets  NativeTunnel.ets  SmartAgentStrategy.ets  VpnBackgroundTask.ets  WebHttpDns.ets  WireGuardConfig.ets
entry/src/main/resources/base/element/: color.json  string.json
native/wg_boringtun/: Cargo.toml  build.rs
native/wg_boringtun/src/: lib.rs
scripts/: build_native.js  build_native.sh
(+5 files in other folders)
