[package]
name = "wg_boringtun"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "HarmonyOS N-API bridge for a BoringTun WireGuard tunnel."

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
boringtun = "0.7.1"
libc = "0.2"
napi-derive-ohos = "1.2.0"
napi-ohos = { version = "1.2.0", default-features = false, features = ["napi4"] }
once_cell = "1.19"

[build-dependencies]
napi-build-ohos = "1.2.0"
